--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -22,9 +22,15 @@ Our results are also conceptually consistent with a recent study by @nentwicheta
 
 ## Factors that may contribute to differences between EEG and fMRI
 
-Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the temporal and spatial resolutions of the two modalities, and the methods used to estimate functional connectivity.
+Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial<!--and temporal--> resolutions of the two modalities, and the methods used to estimate functional connectivity. 
 
-Network variants are likely sensitive to the number of sites or electrodes used when estimating functional connectivity, as this influences spatial resolution and restricts the number of data points that can be used to compare any two functional connectomes. For example, with a small number of electrodes there may not be a sufficient number of points in a functional connectome to adequately differentiate between individuals, resulting in between individual similarity being overstated. We assumed that our EEG system had a sufficient electrode density for studying network variants; however, fMRI studies typically use a much higher number of sites, for example @grattonetal_FunctionalBrainNetworks_2018 used a 333 site cortical parcellation, which allow for more precise depictions of the functional connectome. For this reason, higher density EEG systems (e.g., 128, 256, or 512 electrodes) may be better-equipped to study network variants [cf. @ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006].
+Network variants are likely sensitive to the spatial resolution of the neuroimaging system used to study them, as this influences the precision with which individual differences in functional connectivity can be measured. For EEG, the number of electrodes and distance between them determines spatial resolution, with higher electrode density corresponding to higher spatial resolution [@ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. With low electrode density, as in the 10-20 system, EEG typically has a spatial resolution of approximately 5 to 9 centimetres [@burleetal_SpatialTemporalResolutions_2015; @srinivasanetal_EstimatingSpatialNyquist_1998]. Higher density EEG systems can achieve a spatial resolution of up to 1 to 2 centimetres, but this still falls short of the spatial resolution of fMRI, which typically ranges from 500 microns to 4 millimetres [@glover_OverviewFunctionalMagnetic_2011]. Because EEG functional connectomes are naturally spatially blurrier than fMRI functional connectomes, network variants may be harder to detect or less pronounced in EEG, leading to smaller, less consistent, differences in functional connectome similarity within versus between individuals.[^3] Future work might address this possibility either by testing how individual differences in functional connectome similarity vary as a function of electrode density, or by using simultaneous EEG and fMRI [@mulert_SimultaneousEEGFMRI_2013] to compare the strength and consistency of network variants between the two modalities in the same sample.
+
+<!-- The ability to detect network variants may be more strongly associated with spatial resolution. Although EEG has sufficient spatial resolution for the purposes of person identification and recognition—colloquially referred to as functional connectome fingerprinting—it may not have adequate spatial resolution to detect differences in functional connectome similarity as large as with fMRI.  -->
+<!-- measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. -->
+<!-- This is further complicated by the relationship between the size of neural populations in different frequency bands. @vonsteinsarnthein_DifferentFrequenciesDifferent_2000; @capillaetal_NaturalFrequenciesResting_2022 -->
+
+<!-- Network variants are likely sensitive to the number of sites or electrodes used when estimating functional connectivity, as this influences spatial resolution and restricts the number of data points that can be used to compare any two functional connectomes. For example, with a small number of electrodes there may not be a sufficient number of points in a functional connectome to adequately differentiate between individuals, resulting in between individual similarity being overstated. We assumed that our EEG system had a sufficient electrode density for studying network variants; however, fMRI studies typically use a much higher number of sites, for example @grattonetal_FunctionalBrainNetworks_2018 used a 333 site cortical parcellation, which allow for more precise depictions of the functional connectome. For this reason, higher density EEG systems (e.g., 128, 256, or 512 electrodes) may be better-equipped to study network variants [cf. @ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. -->
 
 Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
 
@@ -50,10 +56,9 @@ First, it is unclear how our results might generalize to more diverse samples. I
 
 Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
 
-TODO: Cross-frequency coupling
+Finally, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we had no strong empirical motivation to explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
 
 <!-- Third, our approach to testing for the presence of network variants was insensitive to the possibility that EEG network variants are not individually unique, but rather fall into clusters.  -->
-
 
 <!-- First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Additionally, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants [e.g., @vandevilleetal_WhenMakesYou_2021]. -->
 
@@ -88,5 +93,7 @@ TODO: Cross-frequency coupling
 In this study, we explored the feasibility of using EEG to study network variants. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants. In future studies, it would be interesting to see whether network variants in EEG functional connectomes can be made more consistent through state or task manipulations that are known to bring out meaningful differences between participants [@finn_ItTimePut_2021; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020]; or to systematically investigate how decisions related to preprocessing or functional connectivity estimation influence the structure of EEG functional connectomes and their similarity within and between individuals, across tasks, states, and over time [@colcloughetal_HowReliableAre_2016; @fraschinietal_RobustnessFunctionalConnectivity_2019].
 
 <!-- Footnotes start --------------------------------------------------------->
+
+[^3]: EEG biometrics research has demonstrated that resting state (eyes open and closed) functional connectomes from the same individual can be accurately matched when comparing a given individual's connectome against all other connectomes in small samples [up to and around 100 participants\; e.g., @laroccaetal_HumanBrainDistinctiveness_2014]. However, although findings like this do suggest that EEG functional connectomes are more similar within than between individuals---to a degree that allows for accurate matching---they do not address the magnitude of these individual differences. Thus, future work may find that EEG has sufficient spatial resolution for biometrics (where the size of individual differences do not matter, so long as they are consistent), but insufficient spatial resolution for studying network variants (where the size of individual differences are a focal interest).
 
 <!-- Footnotes end ----------------------------------------------------------->
