--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -299,7 +299,7 @@ After fitting the model we constructed a reference grid using estimated marginal
 
 #### Interpreting group-level contrasts
 
-We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of all assumptions used to compute our estimates was questionable (e.g., we knowingly misspecified the random effects of the mixed beta regressions), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth. Based on the results of @grattonetal_FunctionalBrainNetworks_2018, we might consider contrasts showing that functional connectomes were approximately 0.2 points (on the response scale) more similar within participants than between participants to correspond to what has been found with shorter fMRI scanning times (depending on the task, anywhere from 5 to 15 minutes), and approximately 0.3 points more similar to correspond to what has been found with longer scanning times (depending on the task, anywhere from 25 to 75 minutes),[^2] keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies. As a lower bound, we considered differences of approximately 0.1 points to be small but practically relevant, as differences of this size might still provide weak evidence for the presence of network variants<!-- given the limitations of our study (see discussion) -->.
+We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of all assumptions used to compute our estimates was questionable (e.g., we knowingly misspecified the random effects of the mixed beta regressions), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth. Based on the results of @grattonetal_FunctionalBrainNetworks_2018, we might consider contrasts showing that functional connectomes were approximately 0.2 points (on the response scale) more similar within participants than between participants to correspond to what has been found with shorter fMRI scanning times (depending on the task, anywhere from 5 to 15 minutes), and approximately 0.3 points more similar to correspond to what has been found with longer scanning times (depending on the task, anywhere from 25 to 75 minutes),[^2] keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies. As a lower bound, we considered differences of approximately 0.1 points to be a small but meaningful effect size, as differences of this size might still provide weak evidence for the presence of network variants<!-- given the limitations of our study (see discussion) -->.
 
 ### Individual-level functional connectome similarity contrasts
 
