--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -2,11 +2,11 @@
 
 In this study, we explored the feasibility of using EEG to study network variants. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different timescales using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. Based on the findings of previous fMRI network variant studies, we expected to find effects consistent with functional connectomes that were more similar within than between individuals, with smaller variations in similarity related to session or state---consistent with the idea that functional networks are stable and trait-like with equal amounts of common and unique variance between individuals [@grattonetal_FunctionalBrainNetworks_2018].
 
-Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small and not practically relevant, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes. In the few cases where effect sizes were considered practically relevant, they were still at most small, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes that were small and practically relevant---or comparable to fMRI effect sizes in a handful of cases---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
+Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small and not meaningful, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes. In the few cases where effect sizes were considered meaningful, they were still at most small, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes that were small and meaningful---or comparable to fMRI effect sizes in a handful of cases---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
 
 ## Differences between phase and amplitude coupling
 
-Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally weaker than with the phase lag index. This difference has also been previously found by @fraschinietal_RobustnessFunctionalConnectivity_2019, who tested the robustness of several functional connectivity metrics for biometric person identification [for a review of EEG biometrics, see @chanetal_ChallengesFuturePerspectives_2018]. Given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity, we expected them to differ [@engeletal_IntrinsicCouplingModes_2013]. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Appendix Figures \@ref(fig:phase-similarity-plots-hilbert-delta)-\@ref(fig:phase-similarity-plots-hilbert-gamma) we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, and highlight how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004]. 
+Across all frequency bands, we found that functional connectivity estimated with the orthogonalized amplitude envelope correlation was generally weaker than with the phase lag index. This difference has also been previously found by @fraschinietal_RobustnessFunctionalConnectivity_2019, who tested the robustness of several functional connectivity metrics for biometric person identification [for a review of EEG biometrics, see @chanetal_ChallengesFuturePerspectives_2018]. Given that the phase lag index and orthogonalized amplitude envelope correlation measure different aspects of functional connectivity, we expected them to differ [@engeletal_IntrinsicCouplingModes_2013]. However, we also note that this difference is likely partially due to differences in the frequency specificity of the two methods, with the phase lag index having greater specificity than the orthogonalized amplitude envelope correlation. This difference in frequency specificity is attributable to the phase lag index being estimated and averaged over multiple frequency bins in each frequency band when using the multitaper method, versus the orthogonalized amplitude envelope correlation being estimated with a single analytic signal in each frequency band when using the Hilbert transform method. In Appendix Figures \@ref(fig:phase-similarity-plots-hilbert-delta)-\@ref(fig:phase-similarity-plots-hilbert-gamma) we show how the results change when the phase lag index is estimated using the Hilbert transform method. Across all five frequency bands we found that (1) functional connectivity was generally lower than we found with the multitaper method, but individual patterns of connectivity were similar or the same; and (2) functional connectome similarity was generally higher than we found with the multitaper method, but patterns of similarity and contrast effect sizes were similar or the same. Thus, although these changes were not great enough to change our conclusions, they did make the differences observed between the phase lag index and orthogonalized amplitude envelope correlation results less stark, and highlight how different spectral analysis methods can influence functional connectivity estimates if analysis parameters cannot be matched [cf. @bruns_FourierHilbertWaveletbased_2004]. 
 
 Another factor possibly contributing to the differences observed between the phase lag index and orthogonalized amplitude envelope correlation was the effect of epoch length on the two methods. @fraschinietal_EffectEpochLength_2016 compared the effect of non-overlapping epochs with variable length (1, 2, 4, 6, 8, 10, 12, 14 and 16 seconds) on broadband (1-20 Hz) functional connectivity estimates in a small sample of middle-aged adults during resting eyes-closed resting state. They found that group-level mean functional connectivity was higher for the phase lag index than the orthogonalized amplitude envelope correlation at 1-6 second long epochs, with more comparable estimates between the two methods with 8-16 second long epochs. They also found that group-level mean functional connectivity decreased as a function of epoch length, with the phase lag index and orthogonalized amplitude envelope correlation stabilizing at 12 and 6 second long epochs, respectively. Because Fraschini et al.'s [-@fraschinietal_EffectEpochLength_2016] results were based on broadband group-level mean functional connectivity, they are not directly comparable to our own findings; however, they do highlight how preprocessing decisions can (differentially) influence functional connectivity estimates. In the context of our study, we emphasize the need for future work to explore how preprocessing decisions can influence individual-level functional connectivity and network similarity estimates, with a focus on identifying approaches that can achieve both high within-individual and low between-individual functional connectome similarity.
 
@@ -22,7 +22,7 @@ Our results are also conceptually consistent with a recent study by @nentwicheta
 
 ## Factors that may contribute to differences between EEG and fMRI
 
-Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial<!--and temporal--> resolutions of the two modalities, and the methods used to estimate functional connectivity. 
+Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial and temporal resolutions of the two modalities, and the methods used to estimate functional connectivity. 
 
 Network variants are likely sensitive to the spatial resolution of the neuroimaging system used to study them, as this influences the precision with which individual differences in functional connectivity can be measured. For EEG, the number of electrodes and distance between them determines spatial resolution, with higher electrode density corresponding to higher spatial resolution [@ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. With low electrode density, as in the 10-20 system, EEG typically has a spatial resolution of approximately 5 to 9 centimetres [@burleetal_SpatialTemporalResolutions_2015; @srinivasanetal_EstimatingSpatialNyquist_1998]. Higher density EEG systems can achieve a spatial resolution of up to 1 to 2 centimetres, but this still falls short of the spatial resolution of fMRI, which typically ranges from 500 microns to 4 millimetres [@glover_OverviewFunctionalMagnetic_2011]. Because EEG functional connectomes are naturally spatially blurrier than fMRI functional connectomes, network variants may be harder to detect or less pronounced in EEG, leading to smaller, less consistent, differences in functional connectome similarity within versus between individuals.[^3] Future work might address this possibility either by testing how individual differences in functional connectome similarity vary as a function of electrode density, or by using simultaneous EEG and fMRI [@mulert_SimultaneousEEGFMRI_2013] to compare the strength and consistency of network variants between the two modalities in the same sample.
 
@@ -32,7 +32,7 @@ Network variants are likely sensitive to the spatial resolution of the neuroimag
 
 <!-- Network variants are likely sensitive to the number of sites or electrodes used when estimating functional connectivity, as this influences spatial resolution and restricts the number of data points that can be used to compare any two functional connectomes. For example, with a small number of electrodes there may not be a sufficient number of points in a functional connectome to adequately differentiate between individuals, resulting in between individual similarity being overstated. We assumed that our EEG system had a sufficient electrode density for studying network variants; however, fMRI studies typically use a much higher number of sites, for example @grattonetal_FunctionalBrainNetworks_2018 used a 333 site cortical parcellation, which allow for more precise depictions of the functional connectome. For this reason, higher density EEG systems (e.g., 128, 256, or 512 electrodes) may be better-equipped to study network variants [cf. @ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. -->
 
-Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
+Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of time points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
 
 Second, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that surprisingly high similarity within and between individuals was associated with functional connectomes with surprisingly low coupling across sensors for all connectomes. Because of the homogeneously low patterns of coupling, we would argue that these cases of high similarity are not particularly interesting, and should likely be treated as a methodological artifact.
 
@@ -56,7 +56,7 @@ First, it is unclear how our results might generalize to more diverse samples. I
 
 Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
 
-Finally, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we had no strong empirical motivation to explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
+Finally, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we did not explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
 
 <!-- Third, our approach to testing for the presence of network variants was insensitive to the possibility that EEG network variants are not individually unique, but rather fall into clusters.  -->
 
@@ -83,8 +83,6 @@ Finally, we limited our investigation to within-frequency analyses of functional
 <!-- seeking to develop neuroimaging-based biomarkers with real-world utility in areas such as biometrics (H.-L. Chan, Kuo, Cheng, & Chen, 2018) and human lifespan development (Garrett et al., 2013) -->
 
 <!-- There is evidence to suggest EEG network variants do exist. Discuss fingerprinting and phenotyping studies... -->
-
-
 
 <!-- Systematic investigation into the factors that influence the detection of EEG network variants... preprocessing, how volume conduction is dealt with, whether between-person differences are sensitive to timescale or task, choice of connectivity measure, method of comparing functional connectomes, etc. -->
 
