--- a/manuscripts/thesis/index.Rmd
+++ b/manuscripts/thesis/index.Rmd
@@ -3,13 +3,13 @@ params:
   references_path : "path"
   packages_path   : "path"
 
-title             : "Studying network variants with electroencephalography"
+title             : "Studying Network Variants With Electroencephalography"
 shorttitle        : "Network Variants"
 
 author: 
   - name          : "Michael McCarthy"
     affiliation   : "1"
-    corresponding : no    # Define only one corresponding author
+    corresponding : no # Define only one corresponding author
     address       :
     email         : "michael.mccarthy@ucalgary.ca"
 
@@ -19,28 +19,49 @@ affiliation:
     institution   : "University of Calgary"
 
 note              : |
-  Author's Note: 
 
 abstract          : |
   The study of network variants, individual-specific deviations in whole brain functional network organization, is an area of growing interest in human neuroscience due to its relevance for understanding *how much* and *in which ways* whole brain functional networks differ between and within individuals. Although previous research has mainly relied on highly sampled functional magnetic resonance imaging (fMRI) data to study network variants, electroencephalography (EEG) has the potential to deliver complimentary insights given that it directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time. Here we explored the feasibility of using EEG to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions---testing for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different frequency bands using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
   
-keywords          : |
-  Electroencephalography, Functional Connectivity, Network Variants, Individual Differences
-wordcount         : 
+  *Keywords:* Electroencephalography, Functional Connectivity, Network Variants, Individual Differences
+  
+  :::{custom-style="h1-pagebreak"}
+  Preface
+  :::
+  
+  This thesis is original, unpublished, independent work by the author, M. McCarthy.
+
+  :::{custom-style="h1-pagebreak"}
+  Acknowledgements
+  :::
+  
+  I thank my supervisor, Dr. Andrea Protzner, for her guidance, mentorship, and support throughout my degree and thesis, my committee members, Dr. Penny Pexman and Dr. Signe Bray, for their feedback on my thesis proposal, and Dr. Ford Burles for training me to work with EEG data. I also thank my father, Gord, my brother, Branden, and my grandparents, Joan and Walter, for their love and support—I could not have achieved all that I have without you.
+  
+  This research was supported by funding received through the Natural Sciences and Engineering Research Council (NSERC) Canada Graduate Scholarship; University of Calgary Faculty of Graduate Studies Master’s Research Scholarship and Graduate Studies Scholarship; and Alberta Graduate Excellence Scholarships (AGES) Master’s Research Scholarship.
+  
+  :::{custom-style="h1-pagebreak"}
+  Table of Contents
+  :::
+    
+  The Table of Contents needs to be added manually in Microsoft Word after the document has been knit. Instructions:
+    
+  - Go to *References > Table of Contents > Custom...*
+  - Set *Show levels* to 2
+  - Manually delete the title from the TOC
+  
+  Other pages in the thesis also need to be manually edited to meet the University of Calgary's formatting and structuring requirements. See: https://grad.ucalgary.ca/sites/default/files/teams/3/Thesis%20Guidelines_May%202020.pdf
 
 bibliography      : ["`r params$references_path`", "`r params$packages_path`"]
 
-floatsintext      : no
-figurelist        : no
-tablelist         : no
-footnotelist      : no
-linenumbers       : yes
+# appendix          : "manuscripts/child-documents/appendix.Rmd"
+
 mask              : no
-draft             : no
 
 documentclass     : "apa6"
 classoption       : "man"
-output            : papaja::apa6_word
+output            :
+  papaja::apa6_word:
+    reference_docx: "apa6_man.docx"
 ---
 
 ```{r setup, include = FALSE}
@@ -94,12 +115,8 @@ tar_load(appendix)
 
 # References
 
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
-
-<div id="refs" custom-style="Bibliography"></div>
-\endgroup
+:::{#refs custom-style="Bibliography"}
+:::
 
 \newpage
 
