--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -12,7 +12,7 @@ Another factor possibly contributing to the differences observed between the pha
 
 ## Consistency with related neurophysiological connectomics literature
 
-Consistent with previous EEG research on resting state networks [@samoginetal_FrequencyDependentFunctional_2020], we found that functional connectivity was strongest in the alpha band, which is likely due to the fact that alpha band oscillations are dominant during resting state <!--and are more strongly correlated with known resting state networks, such as the default-mode network-->[@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019]. Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals, which may indicate that EEG network variants are more sensitive to task state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018]. In support of this point, although we found that the relative strength of both within and between individual similarities generally shifted in the same direction at different timescales, the variability of these shifts was greater between than within individuals, indicating that functional connectomes became more differentiated between individuals as a function timescale. The smaller changes we found within individuals were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales; with higher similarity for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index as in @colcloughetal_HowReliableAre_2016.
+Consistent with previous EEG research on resting state networks [@samoginetal_FrequencyDependentFunctional_2020], we found that functional connectivity was strongest in the alpha band, which is likely due to the fact that alpha band oscillations are dominant during resting state <!--and are more strongly correlated with known resting state networks, such as the default-mode network-->[@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019]. Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals, which may indicate that EEG network variants are more sensitive to task state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018]. In support of this point, although we found that the relative strength of both within and between individual similarities generally shifted in the same direction at different timescales, the variability of these shifts was greater between than within individuals, indicating that functional connectomes became more differentiated between individuals as a function of timescale. The smaller changes we found within individuals were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales; with higher similarity for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index as in @colcloughetal_HowReliableAre_2016.
 
 Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function timescale, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
 
