--- a/manuscripts/thesis/index.Rmd
+++ b/manuscripts/thesis/index.Rmd
@@ -21,7 +21,7 @@ affiliation:
 note              : |
 
 abstract          : |
-  The study of network variants, individual-specific deviations in whole brain functional network organization, is an area of growing interest in human neuroscience due to its relevance for understanding *how much* and *in which ways* whole brain functional networks differ between and within individuals. Although previous research has mainly relied on highly sampled functional magnetic resonance imaging (fMRI) data to study network variants, electroencephalography (EEG) has the potential to deliver complimentary insights given that it directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time. Here we explored the feasibility of using EEG to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions---testing for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different frequency bands using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
+  The study of network variants, individual-specific deviations in whole brain functional network organization, is an area of growing interest in human neuroscience. Although previous research has mainly relied on highly sampled functional magnetic resonance imaging (fMRI) data to study network variants, electroencephalography (EEG) has the potential to deliver complimentary insights given that it directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time. Here we explored the feasibility of using EEG to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different frequency bands using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants. We discuss several factors that may explain the differences between our findings and the larger, more consistent effects reported in fMRI studies of network variants, such as the spatial and temporal resolution of EEG and fMRI, and the methods used to estimate functional connectivity. We then offer suggestions for future EEG research that might address some shortcomings of our study.
   
   *Keywords:* Electroencephalography, Functional Connectivity, Network Variants, Individual Differences
   
@@ -35,9 +35,9 @@ abstract          : |
   Acknowledgements
   :::
   
-  I thank my supervisor, Dr. Andrea Protzner, for her guidance, mentorship, and support throughout my degree and thesis, my committee members, Dr. Penny Pexman and Dr. Signe Bray, for their feedback on my thesis proposal, and Dr. Ford Burles for training me to work with EEG data. I also thank my father, Gord, my brother, Branden, and my grandparents, Joan and Walter, for their love and support—I could not have achieved all that I have without you.
+  I thank my supervisor, Dr. Andrea Protzner, for her guidance, mentorship, and support throughout my degree and thesis; my committee members, Dr. Penny Pexman, Dr. Signe Bray, and Dr. Bradley Goodyear for their feedback on my thesis; and Dr. Ford Burles for training me to work with EEG data. I also thank my father, Gord, my brother, Branden, and my grandparents, Joan and Walter, for their love and support---I could not have achieved all that I have without you.
   
-  This research was supported by funding received through the Natural Sciences and Engineering Research Council (NSERC) Canada Graduate Scholarship; University of Calgary Faculty of Graduate Studies Master’s Research Scholarship and Graduate Studies Scholarship; and Alberta Graduate Excellence Scholarships (AGES) Master’s Research Scholarship.
+  This research was partially supported by funding received through the Natural Sciences and Engineering Research Council (NSERC) Canada Graduate Scholarship; University of Calgary Faculty of Graduate Studies Master’s Research Scholarship and Graduate Studies Scholarship; and Alberta Graduate Excellence Scholarships (AGES) Master’s Research Scholarship.
   
   :::{custom-style="h1-pagebreak"}
   Table of Contents
